# ACL-FPL-Companion

./: README.md  lgbm_model_pipeline.joblib  nn_model1.h5
Milestone3/: .gitignore  COMPLETE_GUIDE.md  PRESENTATION_GUIDE.md  README.md  app.py  initialize_vectors.py  pyproject.toml  requirements.txt  test_intent.py  verify_integrity.py
Milestone3/backend/: __init__.py  config.py  intent_parser.py  knowledge_graph.py  response_generator.py
